# crowdfunding-project

./: .env.example  .gitignore  AGENT.md  DESCRIPTION.md  README.md  TESTS.md  build.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt  setup.sh  test.txt
CrowdfundingProject/: asgi.py  settings.py  urls.py  views.py  wsgi.py
campaigns/: admin.py  apps.py  models.py  urls.py  views.py
campaigns/migrations/: 0001_initial.py  0002_tag_rename_content_campaignupdate_content_md_and_more.py  0003_campaign_donate_qr_image_url.py  0004_increase_goal_amount_precision.py
campaigns/templatetags/: markdown_extras.py
donations/: admin.py  apps.py  models.py  urls.py  views.py
donations/migrations/: 0001_initial.py  0002_increase_donation_amount_precision.py  0003_donation_decided_at_donation_decided_by_and_more.py  0004_alter_donation_status.py
donor_groups/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
donor_groups/migrations/: 0001_initial.py
groups/: admin.py  apps.py  models.py  urls.py  views.py
groups/migrations/: 0001_initial.py  0002_remove_donorgroup_join_code.py  0003_donorgroup_image_url.py  0004_group_messages.py
groups/templates/groups/: group_form.html  (+2 more)
templates/: home.html
theme/static_src/: package-lock.json
theme/templates/: base.html
user/: admin.py  context_processors.py  forms.py  models.py  tests.py  urls.py  validators.py  views.py
user/migrations/: 0001_initial.py  0002_profile_phone_db_fix.py  0003_drop_profile_opt_in_pairing_column.py  0004_profile_extra_fields.py  0005_notifications.py
(+32 files in other folders)
