[project]
name = "crowdfunding-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cookiecutter>=2.6.0",
    "django>=5.2.8",
    "django-browser-reload>=1.21.0",
    "django-heroicons>=0.0.8",
    "django-htmx>=1.26.0",
    "django-tailwind>=4.4.1",
    "honcho>=2.0.0",
]

[tool.ruff]
line-length = 120
indent-width = 2
